# qwen3-tts-server

./: .dockerignore  .env.cpu  .env.example  .gitignore  =6.0  Dockerfile  Dockerfile.debug  Dockerfile.slim  LICENSE  ORCHESTRATION.md  README.md  REQUIREMENTS-FRONTEND.md  REQUIREMENTS.md  TUNNEL-RESTART.md  VOICE_PACKAGES.md  audiobook_render_test.py  clone_voice_test.py  config-local-temp.yaml  config-relay.yaml  config.example.yaml  demo_voice_packaging.py  docker-compose.yml  espnet_tts_test.py  pyproject.toml  requirements-client.txt  requirements-dev.txt  requirements-server.txt  requirements.txt  simple_audio_test.py  simple_tts_test.py  test_cpu_engine.py  test_cpu_synthesis.py  test_cpu_tts.py  test_model_loading.py  test_pass1_cloned.py  test_pass2_designed.py  test_quantization.py  test_qwen_from_pretrained.py  test_real_model_names.py  test_real_qwen_api.py  (+4 more)
.github/: PULL_REQUEST_TEMPLATE.md
bridge/: server.py
client/: __init__.py  tts_client.py
contracts/: draft-api.yaml  gpu-backend.yaml  prompt-sync.yaml  relay-api.yaml  tts-engine.yaml
docs/: CPU_TESTING.md  ENHANCED_TUNNEL.md  ROADMAP.md  VOICE_LIBRARY.md  architect-review.md  architecture.md  findings-issue-18-contract-gaps.md  gpu-backend-design.md  qa-review.md  requirements.md  security-review.md  sprint1-architect-review.md  sprint1-code-review.md  sprint1-proposal.md  sprint1-qa-report.md  sprint1-review.md  sprint2-code-review.md  sprint2-proposal.md  sprint2-review.md  sprint3-proposal.md  sprint3-review.md  sprint4-code-review-frontend.md  sprint4-proposal.md  sprint4-review.md  (+2 more)
(+118 files in other folders)
